tests/it/snapshots/it__snapshot_screens__contacts_search_by_email.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 394
description: "Contacts → type search 'carmen'"
expression: output
---
                                    Contacts

┌ Contacts (1) ────────────────────────────────────────────────────────────────┐
│▸ CG Carmen Gutierrez  +1-218-142-1078                                        │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘















 Search: carmen  [Esc] clear
[a] Add Contact  [g] Groups  [Enter] Archived Contacts  [Enter] Find Duplicates
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
