tests/it/snapshots/it__snapshot_screens__contacts_search_by_name.snap
---
source: tests/it/snapshot_screens.rs
assertion_line: 378
description: "Contacts → type search 'Ahmed'"
expression: output
---
                                    Contacts

┌ Contacts (1) ────────────────────────────────────────────────────────────────┐
│▸ AN Ahmed Nikolaus  +1-203-107-1013                                          │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘















 Search: Ahmed  [Esc] clear
[a] Add Contact  [g] Groups  [Enter] Archived Contacts  [Enter] Find Duplicates
   1 My Card    │ 2 ★ Contacts  │  3 Exchange   │   4 Groups    │    5 More
