tests/it/snapshots/it__snapshot_screens__delivery.snap
---
source: tests/it/snapshot_screens.rs
description: Settings → select Delivery
expression: output
---
                                 Delivery Status

 ○ Sync  [Enter]
┌ [-] All Delivered ───────────────────────────────────────────────────────────┐
└──────────────────────────────────────────────────────────────────────────────┘

















[?] help  [Esc] back  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
