tests/it/snapshots/it__snapshot_screens__edit_field_dialog.snap
---
source: tests/it/snapshot_screens.rs
description: MyInfo → press Enter on field
expression: output
---
                                   Edit Field

 ○ Sync  [Enter]
Editing: Mobile

Value
┌──────────────────────────────────────────────────────────────────────────────┐
│+41 79 123 45 67                                                              │
└──────────────────────────────────────────────────────────────────────────────┘

Comment (your eyes only, optional)
┌ ⌨ type here ─────────────────────────────────────────────────────────────────┐
│Only visible to you                                                           │
└──────────────────────────────────────────────────────────────────────────────┘








[EDIT]   [Enter] Save  [Esc] Cancel  [Esc] Back  [?] help  [q] quit
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
