tests/it/snapshots/it__snapshot_screens__edit_name_dialog.snap
---
source: tests/it/snapshot_screens.rs
description: Settings → select Display Name
expression: output
---
                                Edit Display Name

 ○ Sync  [Enter]
Display Name
┌──────────────────────────────────────────────────────────────────────────────┐
│Alice Smith                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘















[EDIT]   [Enter] Save  [Esc] Cancel  [Esc] Back  [?] help  [q] quit
  1 ★ My Card   │  2 Contacts   │  3 Exchange   │   4 Groups    │    5 More
