tests/it/snapshots/it__snapshot_screens__edit_relay_url_dialog.snap
---
source: tests/it/snapshot_screens.rs
description: Settings → select Relay URL
expression: output
---
                                 Edit Relay URL

 ○ Sync  [Enter]
Relay URL
┌──────────────────────────────────────────────────────────────────────────────┐
│wss://relay.vauchi.app                                                        │
└──────────────────────────────────────────────────────────────────────────────┘















[EDIT]   [Enter] Save  [Esc] Cancel  [Esc] Back  [?] help  [q] quit
   1 My Card    │  2 Contacts   │  3 Exchange   │   4 Groups    │   5 ★ More
